added: – in addon settings meet duration config – on open popup event set current date&time values and immediate calculation end dat&time

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -35,6 +35,9 @@
   "optionsConfNameOwn": {
     "message": "Own"
   },
+  "optionsDuration" : {
+    "message": "Conference duration, min"
+  },
   "optionsConfSettings": {
     "message": "Conference settings"
   },
