removed organiser's field from addon's settings. all data about organizer getting from thunderbird's settings. added organizer's name.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -20,9 +20,6 @@
   "optionsServerAddressPrivate": {
     "message": "Private"
   },
-  "optionsOrganizer": {
-    "message": "Organizer"
-  },
   "optionsConfDescription": {
     "message": "Description"
   },
@@ -98,8 +95,11 @@
   "templateConfDescription": {
     "message": "Description"
   },
-  "templateOrganizer": {
-    "message": "Organizer"
+  "templateOrganizerName": {
+    "message": "Organizer name"
+  },
+  "templateOrganizerEmail": {
+    "message": "Organizer email"
   },
   "templateStartDate": {
     "message": "Start date"
