--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -20,9 +20,6 @@
   "optionsServerAddressPrivate": {
     "message": "Приватный"
   },
-  "optionsOrganizer": {
-    "message": "Организатор"
-  },
   "optionsConfDescription": {
     "message": "Пояснение"
   },
@@ -98,8 +95,11 @@
   "templateConfDescription": {
     "message": "Пояснение"
   },
-  "templateOrganizer": {
-    "message": "Организатор"
+  "templateOrganizerName": {
+    "message": "Имя организатора"
+  },
+  "templateOrganizerEmail": {
+    "message": "Email организатора"
   },
   "templateStartDate": {
     "message": "Дата начала"
